src/test/vm/call12.php.exp
HipHop Fatal error: Call to undefined method A::foo from context B in src/test/vm/call12.php on line 10
